# jax_devcontainer_template

./: main.py  pyproject.toml
.devcontainer/: postCreateScript.sh
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
